--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ main {
 }
 
 footer {
-    background-color: #333;
+    background-color: #007BFF;
     color: #fff;
     text-align: center;
     padding: 10px 0;
@@ -85,7 +85,7 @@ form textarea {
 }
 
 form button {
-    background-color: #333;
+    background-color: #007BFF;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -95,5 +95,5 @@ form button {
 }
 
 form button:hover {
-    background-color: #555;
+    background-color: #007BFF;
 }
